--- a/notebooks/03- Tranformation.ipynb
+++ b/notebooks/03- Tranformation.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "id": "c918addc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np \n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import datetime as dt"
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "id": "8a69cd3f",
    "metadata": {},
    "outputs": [],
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "id": "fd5ff68d",
    "metadata": {},
    "outputs": [
@@ -83,7 +81,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "21395ab2-0685-4b4f-9331-fcf443ec616b",
+       "ref": "52edc0f3-c7ae-4065-8c17-f26017708736",
        "rows": [
         [
          "0",
@@ -827,7 +825,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "f3225c35",
    "metadata": {},
    "outputs": [
@@ -903,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "id": "45a646f3",
    "metadata": {},
    "outputs": [
@@ -952,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 84,
    "id": "e9629204",
    "metadata": {},
    "outputs": [
@@ -988,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 85,
    "id": "8794788f",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 86,
    "id": "fcb088d5",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 87,
    "id": "bbbbefed",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 88,
    "id": "50b5d72a",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "id": "5a831dab",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "id": "9b8efc69",
    "metadata": {},
    "outputs": [
