--- a/notebooks/01-Exploration.ipynb
+++ b/notebooks/01-Exploration.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "f9329eab",
    "metadata": {},
    "outputs": [
@@ -285,12 +285,13 @@
     }
    ],
    "source": [
+    "# Voir comment le dataset est structuré\n",
     "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "3e90e9a3",
    "metadata": {},
    "outputs": [
@@ -308,12 +309,13 @@
     }
    ],
    "source": [
+    "# Voir les colonnes du dataset\n",
     "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "fa1bd9c4",
    "metadata": {},
    "outputs": [
@@ -340,6 +342,7 @@
     }
    ],
    "source": [
+    "# Vérification rapide des données\n",
     "data.info()"
    ]
   },
@@ -450,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "223357bf",
    "metadata": {},
    "outputs": [
