--- a/notebooks/02-Cleaning.ipynb
+++ b/notebooks/02-Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "id": "115a7d46",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "id": "4e606ff4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "id": "d032cc8f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "bfecd53f-cbe6-4c86-9455-1c2a81eba1f1",
+       "ref": "2070bc0a-0a70-471c-b13d-f03052a191b1",
        "rows": [
         [
          "7152",
@@ -826,7 +826,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "id": "49887e4a",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e0e7522f-5e2b-4f18-a5a5-e16abdd72af8",
+       "ref": "48d222b2-c9fb-4da9-82db-6ba0a2513599",
        "rows": [
         [
          "7152",
@@ -1646,20 +1646,20 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remplacer les ERROR et UNKNOW par des valeur null\n",
+    "# Remplacer les ERROR et UNKNOW par des valeur null afin de faciliter le traitement des données\n",
     "data = data.replace(['ERROR', 'UNKNOWN'], np.nan)\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "id": "47904ee4",
    "metadata": {},
    "outputs": [
@@ -1713,7 +1713,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "0d830624-ad16-4a49-aed9-2c5db3877062",
+       "ref": "6629bc26-90ca-4cde-95b1-c9e430c2b03e",
        "rows": [
         [
          "7152",
@@ -2457,24 +2457,24 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Changer les str en float et les dates en datetime\n",
+    "# Normalisation des types de données -> Ici string en float et date\n",
     "data['Price Per Unit'] = data['Price Per Unit'].astype(float)\n",
     "data['Total Spent'] = data['Total Spent'].astype(float)\n",
     "data['Quantity'] = data['Quantity'].astype(float)\n",
-    "# format que date sans l'heure\n",
+    "# format de la date sans l'heure (au cas ou si il y a des heures et minutes différentes = dur à grouper par date)\n",
     "data['Transaction Date'] = pd.to_datetime(data['Transaction Date']).dt.date\n",
     "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "id": "82cd3671",
    "metadata": {},
    "outputs": [
@@ -2528,7 +2528,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d586cd48-2c2a-4f48-85c9-4689447eab7f",
+       "ref": "adfb6673-987a-4278-bf5b-993265beeb8c",
        "rows": [
         [
          "7152",
@@ -3272,13 +3272,13 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Trouver le prix unitaire moyen par leur nom de 'Item'\n",
+    "# Trouver le prix unitaire moyen par leur nom de 'Item' \n",
     "item_price_dict = data.set_index('Item')['Price Per Unit'].to_dict()\n",
     "data['Price Per Unit'] = data.apply(lambda row: item_price_dict[row['Item']] if pd.isna(row['Price Per Unit']) else row['Price Per Unit'], axis=1)\n",
     "data"
@@ -3286,7 +3286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "id": "b8a1687a",
    "metadata": {},
    "outputs": [
@@ -3340,7 +3340,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "c1407a0a-73ca-441f-b47d-afc7c592c390",
+       "ref": "b848c0a5-4aa4-435c-a575-b552fe16f641",
        "rows": [
         [
          "7152",
@@ -4084,7 +4084,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4097,19 +4097,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "97c65a71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exportation des données nettoyés ! :)\n",
-    "data.to_csv('../data/processed/cleaned_cafe_sales.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0e177d52",
+   "execution_count": 75,
+   "id": "e16e8644",
    "metadata": {},
    "outputs": [
     {
@@ -4137,7 +4126,7 @@
          "type": "float"
         }
        ],
-       "ref": "f8b3114a-974a-449d-ab3b-6b0fbcdf01db",
+       "ref": "4ff86911-0594-4a6f-860b-a379d640aefa",
        "rows": [
         [
          "count",
@@ -4282,13 +4271,25 @@
        "max       6.250000        5.000000    25.000000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Vérification rapide des données\n",
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "97c65a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exportation des données nettoyés ! :)\n",
+    "data.to_csv('../data/processed/cleaned_cafe_sales.csv', index=False)"
    ]
   }
  ],
