--- a/notebooks/01-Exploration.ipynb
+++ b/notebooks/01-Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "ff474e17",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "2c6c6fa5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "0e236c84",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
          "type": "string"
         }
        ],
-       "ref": "6b504b34-3391-47a7-b619-aa38e61c2ab5",
+       "ref": "cb3bc0a0-1f7f-4ce2-9da4-b4fc10a32b44",
        "rows": [
         [
          "0",
@@ -248,7 +248,7 @@
        "4  In-store       2023-06-11  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
        "(10000, 8)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "06c09aef",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "42ec4048",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
          "type": "integer"
         }
        ],
-       "ref": "9b58c3d9-7dec-442b-aba5-ef6a68de0ab2",
+       "ref": "39c937f0-93c7-4527-a3dd-c7eae68d4d35",
        "rows": [
         [
          "Transaction ID",
@@ -441,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "5e3056ed-c602-428f-971e-8560950e5247",
+       "ref": "ce86636c-7dff-46e9-bf3a-cfeed5359614",
        "rows": [
         [
          "count",
@@ -651,13 +651,24 @@
        "freq              2291      3022              159  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e526537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Voir les types de données\n",
+    "data.dtypes"
    ]
   }
  ],
