--- a/notebooks/02-Cleaning.ipynb
+++ b/notebooks/02-Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "id": "115a7d46",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "id": "4e606ff4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "id": "d032cc8f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "2070bc0a-0a70-471c-b13d-f03052a191b1",
+       "ref": "e3c4290b-dabf-4d38-986b-d5f6067a866b",
        "rows": [
         [
          "7152",
@@ -826,7 +826,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "id": "49887e4a",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "48d222b2-c9fb-4da9-82db-6ba0a2513599",
+       "ref": "dfe5c454-26b9-4c63-99b8-7465c865af13",
        "rows": [
         [
          "7152",
@@ -1646,7 +1646,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,8 +1658,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddc8c534",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire :</h3> <br>\n",
+    "Ici nous gérons les données incohérent en les remplacent pas une valeur null. Plus tard, ça sera plus facile pour nous de les traiter et les manipuler."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "id": "47904ee4",
    "metadata": {},
    "outputs": [
@@ -1713,7 +1722,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "6629bc26-90ca-4cde-95b1-c9e430c2b03e",
+       "ref": "0f6d2338-60bd-445f-8ff9-515f6dc60038",
        "rows": [
         [
          "7152",
@@ -2457,7 +2466,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2473,8 +2482,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa76f6f7",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "Ici nous changeons le types de colonne pour les colonnes -> Quantity, Price per unit, Total Spent et Transaction Date.\n",
+    "Toutes les colonnes sont en chaîne de caractères alors qu'ils sont censés être en colone numérique ou en datetime pour les dates."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "id": "82cd3671",
    "metadata": {},
    "outputs": [
@@ -2528,7 +2547,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "adfb6673-987a-4278-bf5b-993265beeb8c",
+       "ref": "829e0d38-df2b-4867-b160-ffdf44dc6c01",
        "rows": [
         [
          "7152",
@@ -3272,7 +3291,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3285,8 +3304,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b107f15",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "Certains 'Item' étaient vide j'ai donc essayé de les remplir approximativement avec leur prix c'est à dire que les prix ont un seul prix dans le dataset et on va chercher le nom de l'item grâce au prix unitaire."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 41,
    "id": "b8a1687a",
    "metadata": {},
    "outputs": [
@@ -3340,7 +3368,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "b848c0a5-4aa4-435c-a575-b552fe16f641",
+       "ref": "9ab7ebbb-f853-49ed-977b-84b0dbce9f53",
        "rows": [
         [
          "7152",
@@ -4084,7 +4112,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4096,8 +4124,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97391c8f",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br>\n",
+    "On s'occupe à présent des valeur nulles pour la colonne Quantity. Pour les trouver, on prend le total dépense divisé au prix unitaire (si les données sont disponible)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "id": "e16e8644",
    "metadata": {},
    "outputs": [
@@ -4126,7 +4163,7 @@
          "type": "float"
         }
        ],
-       "ref": "4ff86911-0594-4a6f-860b-a379d640aefa",
+       "ref": "b07e03bf-87e6-4ef6-99ea-3e3b11d7ff87",
        "rows": [
         [
          "count",
@@ -4271,19 +4308,19 @@
        "max       6.250000        5.000000    25.000000"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Vérification rapide des données\n",
+    "# Dernier Checkup des données\n",
     "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "97c65a71",
    "metadata": {},
    "outputs": [],
