--- a/notebooks/03- Tranformation.ipynb
+++ b/notebooks/03- Tranformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "id": "c918addc",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "8a69cd3f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "fd5ff68d",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "24df48db-06e8-49f2-b1b7-6b4334acde2d",
+       "ref": "7fc09be2-c420-4b69-8bff-100a9ed5cd29",
        "rows": [
         [
          "0",
@@ -825,7 +825,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "f3225c35",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
     "axes[0, 0].set_ylabel('Nombre de ventes')\n",
     "axes[0, 0].tick_params(axis='x', rotation=45)\n",
     "\n",
-    "# 2-> Revenue total par produit (NOUVEAU!)\n",
+    "# 2-> Revenue total par produit\n",
     "revenue_per_item = data.groupby('Item')['Total Spent'].sum().sort_values(ascending=False)\n",
     "sns.barplot(x=revenue_per_item.index, y=revenue_per_item.values, hue=revenue_per_item.index, palette='magma', ax=axes[0, 1], legend=False)\n",
     "axes[0, 1].set_title('Revenue total par produit', fontweight='bold')\n",
@@ -900,8 +900,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bda355c3",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire :</h3> <br>\n",
+    "Ici une sur les produits: <br>\n",
+    "- Nb de produits vendus <br>\n",
+    "- Les produits qui ont générés le plus de revenues <br>\n",
+    "- Distribution des quantité par produit <br>\n",
+    "- Le montant dépensé par produit <br>\n",
+    "\n",
+    "Cela nous donne une visualisation rapide sur les produits du café, lesquels sont plus rentable, lesquels sont le plus vendus, etc..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "45a646f3",
    "metadata": {},
    "outputs": [
@@ -949,8 +964,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c1f9d98",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "Ici la salad est le produit qui a rapporté le plus de revenue +16K euros générés. <br>\n",
+    "Le produit qui a gégéné le moins est le cookie puis le thé."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "e9629204",
    "metadata": {},
    "outputs": [
@@ -985,8 +1010,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bffca3a",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "Ci-dessus on a vu que la salade a généré le plus de recette mais ce n'est pas le produit le plus vendu. <br>\n",
+    "Produit le plus vendus -> Ce sont le café puis le jus.\n",
+    "Les prix de ces boissons ne sont pas très haut c'est pour ça que la salade rapporte le plus de CA."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "8794788f",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "fcb088d5",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "bbbbefed",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "50b5d72a",
    "metadata": {},
    "outputs": [
@@ -1097,8 +1133,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd9f7134",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "La répartition de moyen de paiement est assez homogène."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "id": "5a831dab",
    "metadata": {},
    "outputs": [
@@ -1133,8 +1178,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2355d89b",
+   "metadata": {},
+   "source": [
+    "<h3>Commentaire:</h3> <br> \n",
+    "Deux grosse pic de vente -> En juin et en octobre <br>\n",
+    "Le mois qui a le moins marché est en février\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "9b8efc69",
    "metadata": {},
    "outputs": [
