not important fix

--- a/notebooks/03- Analysis.ipynb
+++ b/notebooks/03- Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 1,
    "id": "c918addc",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "id": "8a69cd3f",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "id": "fd5ff68d",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
          "type": "float"
         }
        ],
-       "ref": "147593f2-0c58-4ea2-b7b5-a16fc18d69d3",
+       "ref": "ea5557e4-04f5-498b-a4f8-197bb5c2b59a",
        "rows": [
         [
          "0",
@@ -1026,7 +1026,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 4,
    "id": "f3225c35",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "id": "45a646f3",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "id": "5e76d98a",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 7,
    "id": "e9629204",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "id": "8794788f",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "id": "fcb088d5",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 10,
    "id": "bbbbefed",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 11,
    "id": "50b5d72a",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 12,
    "id": "5a831dab",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "id": "9b8efc69",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_airbnb",
+   "display_name": "env_cafe_sales",
    "language": "python",
    "name": "python3"
   },
