--- a/notebooks/01-Exploration.ipynb
+++ b/notebooks/01-Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ff474e17",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c6c6fa5",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0e236c84",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
          "type": "string"
         }
        ],
-       "ref": "cb3bc0a0-1f7f-4ce2-9da4-b4fc10a32b44",
+       "ref": "68150171-8f8e-482f-b36f-0314fbc1c5ab",
        "rows": [
         [
          "0",
@@ -248,7 +248,7 @@
        "4  In-store       2023-06-11  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9329eab",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "(10000, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3e90e9a3",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fa1bd9c4",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "06c09aef",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "42ec4048",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
          "type": "integer"
         }
        ],
-       "ref": "39c937f0-93c7-4527-a3dd-c7eae68d4d35",
+       "ref": "14c95c5b-2f3c-4932-921b-eff4b369d6a8",
        "rows": [
         [
          "Transaction ID",
@@ -441,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "223357bf",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "ce86636c-7dff-46e9-bf3a-cfeed5359614",
+       "ref": "d8c09c0d-b76a-44ba-8d5c-c512a36e9170",
        "rows": [
         [
          "count",
@@ -651,7 +651,7 @@
        "freq              2291      3022              159  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,10 +662,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1e526537",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "5c1c3e5a-5c9e-4d7a-90d1-2de1745e7c08",
+       "rows": [
+        [
+         "Transaction ID",
+         "object"
+        ],
+        [
+         "Item",
+         "object"
+        ],
+        [
+         "Quantity",
+         "object"
+        ],
+        [
+         "Price Per Unit",
+         "object"
+        ],
+        [
+         "Total Spent",
+         "object"
+        ],
+        [
+         "Payment Method",
+         "object"
+        ],
+        [
+         "Location",
+         "object"
+        ],
+        [
+         "Transaction Date",
+         "object"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 8
+       }
+      },
+      "text/plain": [
+       "Transaction ID      object\n",
+       "Item                object\n",
+       "Quantity            object\n",
+       "Price Per Unit      object\n",
+       "Total Spent         object\n",
+       "Payment Method      object\n",
+       "Location            object\n",
+       "Transaction Date    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Voir les types de données\n",
     "data.dtypes"
