--- a/notebooks/02-Cleaning&Transformation.ipynb
+++ b/notebooks/02-Cleaning&Transformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "id": "115a7d46",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "id": "4e606ff4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "id": "d032cc8f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "f0253e1c-3dd9-4938-bdd2-caad0b003bf4",
+       "ref": "ef344f51-684b-43a5-86d3-14b5c450ac93",
        "rows": [
         [
          "7152",
@@ -826,7 +826,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "id": "a1ef77a9",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "id": "bb74eca0",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "id": "49887e4a",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d8b4b9a3-1051-47e4-84b9-d5faf4466dc8",
+       "ref": "c36c0aea-e475-4c5f-8b66-ef3367ad17f7",
        "rows": [
         [
          "7152",
@@ -1706,7 +1706,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "id": "47904ee4",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1782,7 @@
          "type": "datetime"
         }
        ],
-       "ref": "18dd1915-60c1-48b8-bf2e-f45ac7acacd9",
+       "ref": "d603f8fd-4e31-4969-932f-f9a58f2ac0fa",
        "rows": [
         [
          "7152",
@@ -2526,7 +2526,7 @@
        "[10000 rows x 8 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2553,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "id": "6df18e15",
    "metadata": {},
    "outputs": [
@@ -2590,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "id": "82cd3671",
    "metadata": {},
    "outputs": [
@@ -2659,7 +2659,7 @@
          "type": "float"
         }
        ],
-       "ref": "5e5301c0-90af-423c-97de-8138bd954a67",
+       "ref": "08db5234-8fff-493a-8771-a022dfdfd88b",
        "rows": [
         [
          "7152",
@@ -3589,7 +3589,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3612,7 +3612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "id": "b8a1687a",
    "metadata": {},
    "outputs": [
@@ -3681,7 +3681,7 @@
          "type": "float"
         }
        ],
-       "ref": "f227d1b1-e2b5-4525-b111-4dc095aad36d",
+       "ref": "81b120e6-b6c3-46e3-8a61-4f01b0755a46",
        "rows": [
         [
          "7152",
@@ -4611,7 +4611,7 @@
        "[10000 rows x 11 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4633,7 +4633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "e16e8644",
    "metadata": {},
    "outputs": [
@@ -4682,7 +4682,7 @@
          "type": "float"
         }
        ],
-       "ref": "cacc7943-511e-46b7-b692-30b2970af475",
+       "ref": "08859607-0fe6-4f22-a9eb-6b95e2704455",
        "rows": [
         [
          "count",
@@ -4905,7 +4905,7 @@
        "std                              NaN     0.0     3.449446     8.761003  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4917,7 +4917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "97c65a71",
    "metadata": {},
    "outputs": [],
@@ -4929,7 +4929,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_airbnb",
+   "display_name": "env_cafe_sales",
    "language": "python",
    "name": "python3"
   },
